chore: simplify code in AddPluginVisitor